// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component <Panel /> Should render a secondary theme 1`] = `
<div
  className="panel panel--sec"
>
  Lorem Ipsum
</div>
`;

exports[`component <Panel /> should render correctly 1`] = `
<div
  className="panel"
>
  Lorem Ipsum
</div>
`;
